--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="description" content="CBS - Your Trusted Financial Partner for all financial, taxation, and business services" />
-        <!--
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description"
+        content="CBS - Your Trusted Financial Partner for all financial, taxation, and business services" />
+    <!--
         manifest.json provides metadata used when your web app is installed on a
         user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
         -->
-        <!--
+    <!--
         Notice the use of %PUBLIC_URL% in the tags above.
         It will be replaced with the URL of the `public` folder during the build.
         Only files inside the `public` folder can be referenced from the HTML.
@@ -18,86 +20,88 @@
         work correctly both with client-side routing and a non-root public URL.
         Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>CBS | Financial Services</title>
-        <!--
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/cbs-circle-icon.png" />
+    <title>CBS | Financial Services</title>
+    <!--
         Emergent scripts removed
         -->
-        <script>
-            // Only load visual edit scripts when inside an iframe
-            if (window.self !== window.top) {
-                // Load debug monitor script
-                var debugMonitorScript = document.createElement('script');
-                debugMonitorScript.src = 'https://assets.emergent.sh/scripts/debug-monitor.js';
-                document.head.appendChild(debugMonitorScript);
+    <script>
+        // Only load visual edit scripts when inside an iframe
+        if (window.self !== window.top) {
+            // Load debug monitor script
+            var debugMonitorScript = document.createElement('script');
+            debugMonitorScript.src = 'https://assets.emergent.sh/scripts/debug-monitor.js';
+            document.head.appendChild(debugMonitorScript);
 
-                // Configure Tailwind
-                window.tailwind = window.tailwind || {};
-                tailwind.config = {
-                    corePlugins: { preflight: false },
-                };
+            // Configure Tailwind
+            window.tailwind = window.tailwind || {};
+            tailwind.config = {
+                corePlugins: { preflight: false },
+            };
 
-                // Load Tailwind CDN
-                var tailwindScript = document.createElement('script');
-                tailwindScript.src = 'https://cdn.tailwindcss.com';
-                document.head.appendChild(tailwindScript);
-            }
-        </script>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-        <script>
-            // Remove emergent badge if it exists
-            (function() {
-                function removeBadge() {
-                    // Remove by ID
-                    var badge = document.getElementById('emergent-badge');
-                    if (badge) {
-                        badge.remove();
-                        return;
+            // Load Tailwind CDN
+            var tailwindScript = document.createElement('script');
+            tailwindScript.src = 'https://cdn.tailwindcss.com';
+            document.head.appendChild(tailwindScript);
+        }
+    </script>
+</head>
+
+<body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script>
+        // Remove emergent badge if it exists
+        (function () {
+            function removeBadge() {
+                // Remove by ID
+                var badge = document.getElementById('emergent-badge');
+                if (badge) {
+                    badge.remove();
+                    return;
+                }
+                // Remove any element with emergent in id or class
+                var allElements = document.querySelectorAll('[id*="emergent"], [class*="emergent"], a[href*="emergent"]');
+                allElements.forEach(function (el) {
+                    if (el.id && el.id.includes('emergent')) {
+                        el.remove();
+                    } else if (el.href && el.href.includes('emergent.sh') && el.href.includes('badge')) {
+                        el.remove();
+                    } else if (el.textContent && el.textContent.includes('Made with Emergent')) {
+                        el.remove();
                     }
-                    // Remove any element with emergent in id or class
-                    var allElements = document.querySelectorAll('[id*="emergent"], [class*="emergent"], a[href*="emergent"]');
-                    allElements.forEach(function(el) {
-                        if (el.id && el.id.includes('emergent')) {
-                            el.remove();
-                        } else if (el.href && el.href.includes('emergent.sh') && el.href.includes('badge')) {
-                            el.remove();
-                        } else if (el.textContent && el.textContent.includes('Made with Emergent')) {
-                            el.remove();
-                        }
-                    });
-                    // Check for fixed positioned elements in bottom-right that might be the badge
-                    var fixedElements = document.querySelectorAll('[style*="position: fixed"][style*="bottom"], [style*="position:fixed"][style*="bottom"]');
-                    fixedElements.forEach(function(el) {
-                        if (el.textContent && (el.textContent.includes('Emergent') || el.textContent.includes('emergent'))) {
-                            el.remove();
-                        }
-                    });
-                }
-                // Run immediately
-                removeBadge();
-                // Run after DOM loads
-                if (document.readyState === 'loading') {
-                    document.addEventListener('DOMContentLoaded', removeBadge);
-                }
-                // Run after page loads (in case script adds it later)
-                window.addEventListener('load', removeBadge);
-                // Periodically check and remove (in case it's added dynamically)
-                setInterval(removeBadge, 500);
-                // Use MutationObserver to catch when badge is added
-                if (typeof MutationObserver !== 'undefined') {
-                    var observer = new MutationObserver(function(mutations) {
-                        removeBadge();
-                    });
-                    observer.observe(document.body, {
-                        childList: true,
-                        subtree: true
-                    });
-                }
-            })();
-        </script>
-        <!--
+                });
+                // Check for fixed positioned elements in bottom-right that might be the badge
+                var fixedElements = document.querySelectorAll('[style*="position: fixed"][style*="bottom"], [style*="position:fixed"][style*="bottom"]');
+                fixedElements.forEach(function (el) {
+                    if (el.textContent && (el.textContent.includes('Emergent') || el.textContent.includes('emergent'))) {
+                        el.remove();
+                    }
+                });
+            }
+            // Run immediately
+            removeBadge();
+            // Run after DOM loads
+            if (document.readyState === 'loading') {
+                document.addEventListener('DOMContentLoaded', removeBadge);
+            }
+            // Run after page loads (in case script adds it later)
+            window.addEventListener('load', removeBadge);
+            // Periodically check and remove (in case it's added dynamically)
+            setInterval(removeBadge, 500);
+            // Use MutationObserver to catch when badge is added
+            if (typeof MutationObserver !== 'undefined') {
+                var observer = new MutationObserver(function (mutations) {
+                    removeBadge();
+                });
+                observer.observe(document.body, {
+                    childList: true,
+                    subtree: true
+                });
+            }
+        })();
+    </script>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -107,11 +111,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-        <script>
-            !(function (t, e) {
-                var o, n, p, r;
-                e.__SV ||
-                    ((window.posthog = e),
+    <script>
+        !(function (t, e) {
+            var o, n, p, r;
+            e.__SV ||
+                ((window.posthog = e),
                     (e._i = []),
                     (e.init = function (i, s, a) {
                         function g(t, e) {
@@ -144,23 +148,23 @@
                         var u = e;
                         for (
                             void 0 !== a ? (u = e[a] = []) : (a = "posthog"),
-                                u.people = u.people || [],
-                                u.toString = function (t) {
-                                    var e = "posthog";
-                                    return (
-                                        "posthog" !== a && (e += "." + a),
-                                        t || (e += " (stub)"),
-                                        e
-                                    );
-                                },
-                                u.people.toString = function () {
-                                    return u.toString(1) + ".people (stub)";
-                                },
-                                o =
-                                    "init me ws ys ps bs capture je Di ks register register_once register_for_session unregister unregister_for_session Ps getFeatureFlag getFeatureFlagPayload isFeatureEnabled reloadFeatureFlags updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures on onFeatureFlags onSurveysLoaded onSessionId getSurveys getActiveMatchingSurveys renderSurvey canRenderSurvey canRenderSurveyAsync identify setPersonProperties group resetGroups setPersonPropertiesForFlags resetPersonPropertiesForFlags setGroupPropertiesForFlags resetGroupPropertiesForFlags reset get_distinct_id getGroups get_session_id get_session_replay_url alias set_config startSessionRecording stopSessionRecording sessionRecordingStarted captureException loadToolbar get_property getSessionProperty Es $s createPersonProfile Is opt_in_capturing opt_out_capturing has_opted_in_capturing has_opted_out_capturing clear_opt_in_out_capturing Ss debug xs getPageViewId captureTraceFeedback captureTraceMetric".split(
-                                        " ",
-                                    ),
-                                n = 0;
+                            u.people = u.people || [],
+                            u.toString = function (t) {
+                                var e = "posthog";
+                                return (
+                                    "posthog" !== a && (e += "." + a),
+                                    t || (e += " (stub)"),
+                                    e
+                                );
+                            },
+                            u.people.toString = function () {
+                                return u.toString(1) + ".people (stub)";
+                            },
+                            o =
+                            "init me ws ys ps bs capture je Di ks register register_once register_for_session unregister unregister_for_session Ps getFeatureFlag getFeatureFlagPayload isFeatureEnabled reloadFeatureFlags updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures on onFeatureFlags onSurveysLoaded onSessionId getSurveys getActiveMatchingSurveys renderSurvey canRenderSurvey canRenderSurveyAsync identify setPersonProperties group resetGroups setPersonPropertiesForFlags resetPersonPropertiesForFlags setGroupPropertiesForFlags resetGroupPropertiesForFlags reset get_distinct_id getGroups get_session_id get_session_replay_url alias set_config startSessionRecording stopSessionRecording sessionRecordingStarted captureException loadToolbar get_property getSessionProperty Es $s createPersonProfile Is opt_in_capturing opt_out_capturing has_opted_in_capturing has_opted_out_capturing clear_opt_in_out_capturing Ss debug xs getPageViewId captureTraceFeedback captureTraceMetric".split(
+                                " ",
+                            ),
+                            n = 0;
                             n < o.length;
                             n++
                         )
@@ -168,11 +172,12 @@
                         e._i.push([i, s, a]);
                     }),
                     (e.__SV = 1));
-            })(document, window.posthog || []);
-            posthog.init("phc_yJW1VjHGGwmCbbrtczfqqNxgBDbhlhOWcdzcIJEOTFE", {
-                api_host: "https://us.i.posthog.com",
-                person_profiles: "identified_only", // or 'always' to create profiles for anonymous users as well
-            });
-        </script>
-    </body>
+        })(document, window.posthog || []);
+        posthog.init("phc_yJW1VjHGGwmCbbrtczfqqNxgBDbhlhOWcdzcIJEOTFE", {
+            api_host: "https://us.i.posthog.com",
+            person_profiles: "identified_only", // or 'always' to create profiles for anonymous users as well
+        });
+    </script>
+</body>
+
 </html>
